--- a/compose.yaml
+++ b/compose.yaml
@@ -3,22 +3,24 @@ networks:
     name: network2
 
 services:
-  nginx2:
-    container_name: nginx2
+  nginx:
+    container_name: nginx
     image: nginx
     ports:
-      - 80:80
+      - "80:80"
     volumes:
       - ./vhost.conf:/etc/nginx/conf.d/default.conf
-      - ./www:/var/www/public_html
+      - ./www:/app
     networks:
       - network2
     depends_on:
-      - php2
-  php2:
-    container_name: php2
+      - php
+
+  php:
+    container_name: php
     build: ./images/php
     volumes:
-      - ./www:/var/www/public_html
+      - ./www:/app
+    working_dir: /app
     networks:
       - network2
