--- a/images/php/Dockerfile
+++ b/images/php/Dockerfile
@@ -3,6 +3,6 @@ FROM php:8.1-fpm
 RUN apt update && \
     apt install -y curl git
 
-WORKDIR /var/www/public_html
+WORKDIR /app
 
 ENTRYPOINT [ "php-fpm" ]
