--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 networks:
-  network2:
-    name: network2
+  network-php:
+    name: network-php
+    external: true
 
 services:
   nginx:
@@ -12,7 +13,7 @@ services:
       - ./vhost.conf:/etc/nginx/conf.d/default.conf
       - ./www:/app
     networks:
-      - network2
+      - network-php
     depends_on:
       - php
 
@@ -23,4 +24,4 @@ services:
       - ./www:/app
     working_dir: /app
     networks:
-      - network2
+      - network-php
